--- a/tex/3-architektura/2-wymagania-i-zalozenia.tex
+++ b/tex/3-architektura/2-wymagania-i-zalozenia.tex
@@ -20,6 +20,7 @@ Z tego opisu powstaje garść wymagań oraz założeń, które z pewnością nie
     \item \label{req:5} Lupus jest oparty na danych (\textit{data-driven}), co oznacza, że nie narzuca i nie ma wbudowanej żadnej domyślnej logiki pętli.
     \item \label{req:6} Faktyczne komponenty przetwarzające w pętli (część obliczeniowa) Lupus są zewnętrzne względem niego (np. serwery HTTP, szczególnie Open Policy Agent).
     \item \label{reg:7} Lupus powinien być w stanie regulować pracą dowolnego systemu teleinformatycznego bez żadnych jego modyfikacji
+    \item \label{reg:8} Zamodelowanie pętli oraz wyrażenie jej \textbf{Workflow} w Lupus nie powinno wymagać umiejętności technicznych
 \end{enumerate}
 
 Powyższa lista nazwana jest Wymaganiami i referowana w dalszej części dokumentu. 
