--- a/main.tex
+++ b/main.tex
@@ -69,6 +69,7 @@
 \input{tex/1-wstep/main.tex}
 \input{tex/2-stan-wiedzy/main.tex}
 \input{tex/3-architektura/main.tex}
+\input{tex/4-implementacja/main.tex}
 
 %---------------
 % Literatura
