--- a/tex/4-implementacja/2-mechanizmy.tex
+++ b/tex/4-implementacja/2-mechanizmy.tex
@@ -28,7 +28,7 @@ Mechanizm ten służy do rozszerzania możliwości Kubernetes. Kiedy tworzymy Za
 
 \subsubsection{Kubebuilder}
 
-Kubebuilder jest frameworkiem programistycznym do tworzenia Zasobów Własnych oraz ich operatorów. Pozwala na to, aby zaprogramować sekcje zaznaczone na rysunku \ref{fig:42-flow2}.
+Kubebuilder jest frameworkiem programistycznym do tworzenia textit{Zasobów Własnych} oraz ich \textit{Operatorów}. Pozwala na to, aby zaprogramować sekcje zaznaczone na rysunku \ref{fig:42-flow2}.
 
 
 \begin{figure}[!h]
