--- a/main.tex
+++ b/main.tex
@@ -95,6 +95,7 @@
 %-------------
 % Załączniki
 %-------------
+\setcounter{tocdepth}{1}
 \input{tex/appendix/main.tex}
 
 \end{document} % Dobranoc.
