--- a/tex/3-architektura/3-pojecia-i-zasady.tex
+++ b/tex/3-architektura/3-pojecia-i-zasady.tex
@@ -112,7 +112,7 @@ Przykładowe \textbf{workflow pętli} pokazano na rysunku \ref{fig:33-workflow}
 
 \textbf{Elementy Zewnętrzne} to zazwyczaj serwery HTTP (w szczególności serwery Open Policy Agent).
 
-Jak można zauważyć, jeden \textbf{Element Lupus} może komunikować się z żadnym, jednym lub wieloma elementami zewnętrznymi, a liczba ta może się różnić w każdej iteracji pętli).
+Jeden \textbf{Element Lupus} może komunikować się z żadnym, jednym lub wieloma \textbf{lementami zewnętrznymi}, a liczba ta może się różnić w każdej iteracji pętli.
 
 \subsubsection{Dane i Akcje}
 
