--- a/tex/3-architektura/4-instrukcja-uzycia.tex
+++ b/tex/3-architektura/4-instrukcja-uzycia.tex
@@ -36,7 +36,7 @@ Elementem Zewnętrznym może być dowolne oprogramowanie, z które \textbf{Desig
 
 Rekomendowanym przez Lupus typem Elementu Zewnętrznego jest serwer Open Policy Agent. Przygotowanie w tym wypadku polega na uruchomieniu takiego serwera oraz wgraniu mu odpowiednich polityk. Użytkownik jednakże może wydewelopować dowolny serwer HTTP.
 
-Ostatnim możliwym elementem zewnętrznym są \textbf{Funkcje Użytkownika}. Funkcje w kodzie kontrolera zasobu \textbf{Lupus Element}, które są definiowane przez użytkownika. Stanowią one alternatywę dla serwerów HTTP, gdy specjalne wdrażanie takowych może się okazać zbyt kosztowne. Przykładowo jeśli logika wykonywana przez dany \textbf{Element Zewnętrzny} miała by mieć tylko kilka linijek kodu, dużo łatwiej użyć \textbf{Funkcji Użytkownika}. Ich dokładna specyfikacja znajduje się w załączniku //TODO.
+Ostatnim możliwym elementem zewnętrznym są \textbf{Funkcje Użytkownika}. Funkcje w kodzie kontrolera zasobu \textbf{Lupus Element}, które są definiowane przez użytkownika. Stanowią one alternatywę dla serwerów HTTP, gdy specjalne wdrażanie takowych może się okazać zbyt kosztowne. Przykładowo jeśli logika wykonywana przez dany \textbf{Element Zewnętrzny} miała by mieć tylko kilka linijek kodu, dużo łatwiej użyć \textbf{Funkcji Użytkownika}. Ich dokładniejszy opis znajduje się w \hyperref[sec:funkcje-uzytkownika]{Sekcji \ref{sec:funkcje-uzytkownika}}.
 
 \subsubsection{Wyrażenie workflow pętli}
 
