--- a/tex/appendix/main.tex
+++ b/tex/appendix/main.tex
@@ -4,3 +4,8 @@
 \captionsetup[table]{list=no}
 
 \input{tex/appendix/1-definicje.tex}
+\input{tex/appendix/2-instalacja.tex}
+\input{tex/appendix/3-lupn.tex}
+\input{tex/appendix/4-lupin-lupout.tex}
+\input{tex/appendix/5-data.tex}
+\input{tex/appendix/6-akcje.tex}
