--- a/tex/util/acronym-list.tex
+++ b/tex/util/acronym-list.tex
@@ -1,4 +1,16 @@
 \vspace{0.8cm}
 \acronymlist
+
 \acronym{ETSI}{Europen Telecommunications Standards Institute}
+
 \acronym{ENI}{Experiential Networked Intelligence}
+
+\acronym{Architektura}{Zbiór reguł i metod opisujących funkcjonalność, organizację oraz implementację systemu.}\label{def:architektura}
+
+\acronym{Workflow}{Sekwencja połączonych węzłów, czasami zależnych warunkowo, która realizuje określony cel. Zazwyczaj workflow defniuje się w celu organizacji pracy.}\label{def:workflow}
+
+\acronym{Wnioskowanie (ang. \textit{reasoning})}{Proces, w którym system wyciąga logiczne wnioski z dostępnych danych i wiedzy}\label{def:wnioskowanie}
+
+\acronym{Kognitywność (ang. \textit{cognition})}{Proces rozumienia danych oraz informacji w celu produkcji nowych danych, informacji oraz wiedzy}\label{def:kognitywność}
+
+\acronym{System kognitywny}{System, który uczy się, wnioskuje oraz podejmuje decyzje w sposób przypominający ludzki umysł}\label{def:system-kognitywny}
