--- a/tex/appendix/6-akcje.tex
+++ b/tex/appendix/6-akcje.tex
@@ -37,3 +37,42 @@ Możemy wyróżnić następujące kategorie:
     \item 1 akcja do sterowania przepływem \textbf{workflow akcji}: \\ 
           \texttt{\{Switch\}}
 \end{itemize}
+
+\subsection{Przykłady}
+
+Ta sekcja przedstawi przykładowe użycie 6 akcji, które mogą modyfikować dane.
+
+Każdy przykład zawiera:
+
+\begin{itemize}
+    \item reprezentację JSON stanu \textbf{danych} przed modyfikacją akcji,
+    \item notację \textbf{LupN} zastosowanej akcji,
+    \item reprezentację JSON stanu \textbf{danych} po modyfikacji akcji
+\end{itemize}
+
+\subsubsection{Send}
+\begin{figure}[!h]
+    \centering \includegraphics[width=1\linewidth]{a6-send.png}
+    \caption{Przykład modyfikacji danych przez akcje Send}\label{fig:a6-send}
+\end{figure}
+\subsubsection{Nest}
+\begin{figure}[!h]
+    \centering \includegraphics[width=1\linewidth]{a6-nest.png}
+    \caption{Przykład modyfikacji danych przez akcje Nest}\label{fig:a6-nest}
+\end{figure}
+\subsubsection{Remove}
+\begin{figure}[!h]
+    \centering \includegraphics[width=1\linewidth]{a6-remove.png}
+    \caption{Przykład modyfikacji danych przez akcje Remove}\label{fig:a6-remove}
+\end{figure}
+\subsubsection{Rename}
+\begin{figure}[!h]
+    \centering \includegraphics[width=1\linewidth]{a6-rename.png}
+    \caption{Przykład modyfikacji danych przez akcje Rename}\label{fig:a6-rename}
+\end{figure}
+\subsubsection{Duplicate}
+\begin{figure}[!h]
+    \centering \includegraphics[width=1\linewidth]{a6-duplicate.png}
+    \caption{Przykład modyfikacji danych przez akcje Duplicate}\label{fig:a6-duplicate}
+\end{figure}
+\subsubsection{Insert}
